feat(#56): 만료되지 않은 미사용 연차 존재 시, 연차 유형 삭제 못하도록 구현